# MediaProjectWebScraper

./: .replit  README.md  books_risingshadow.csv  code.py  connecting_to_db.py  games_steam.csv  gitignore  movie_metacritic.csv  movies_metacritic.csv  pyproject.toml  scraper.py  shows_metacritic  shows_metacritic.csv
AWSCA2/: db-schema.sql  demo.ps1  description.txt  games.csv  pythonsetup.py  requirements.txt  response.json  setup.ps1  teardown.ps1  template.json  template.yaml  testtemplate.json  userSub.csv
AWSCA2/.aws/: credentials
AWSCA2/function/: awsdb.py  test.py
AWSCA2/lambdaFiles/: awsdb.py
