[tool.poetry]
name = "repl_python3_MediaProjectWebScraper"
version = "0.1.0"
description = ""
authors = ["SeaininKeenan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
